@@ -5,6 +5,9 @@
           configuration parameter - use 'Auth' plugin instead. (diewald)
         - Support environment variable KALAMAR_CLIENT_FILE for
           client information.
+        - Support KALAMAR_PLUGINS as a comma-separated environment
+          variable to load plugins in addition to the 'plugins'
+          parameter in the configuration file. (diewald)
 
 0.47 2022-11-22
         - Add command to generate super_client_info file. (diewald)
